@@ -1,6 +1,12 @@
 Release history for Dist-Zilla-Plugin-Author-KENTNL-RecommendFixes
 
 {{$NEXT}}
+ [Dependencies::Stats]
+ - Dependencies changed since 0.004001, see misc/*.deps* for details
+ - configure: (recommends: ↓1)
+ - develop: +3 ↑2 (recommends: ↓1, suggests: ↑1)
+ - runtime: (recommends: +2)
+ - test: (recommends: ↓2)
 
 0.004001 2014-12-10T10:06:39Z bec44ae
  [Checks]
